working serializer and deserializer